Make tweaks to notifications and alerts for mandates

--- a/content/payments/umap/notifications/mandates/execute.mdx
+++ b/content/payments/umap/notifications/mandates/execute.mdx
@@ -1,15 +1,22 @@
 ---
 sidebar_title: Execute
-page_title: UMAP - Notifications & Alerts - Mandate Execute
+page_title: UMAP - Notifications and alerts - Mandate execution
 order: 7
 visible_in_sidebar: true
 ---
 
-## Mandate Execute Operation Notifications & Alerts
+## Notifications and alerts for mandate execution
 
-### Mandate Execute Initiated
+These are the available webhooks for merchants, when they execute mandates being registered through UMAP.
 
-<CodeBlockWithCopy language="json">
+<Tabs
+   tabs={[
+         {
+            key: "1",
+            label: "Mandate execution initiated",
+            content: (
+               <>
+                  <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
@@ -32,11 +39,16 @@ visible_in_sidebar: true
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Execute Success
-
-<CodeBlockWithCopy language="json">
+                  </CodeBlockWithCopy>
+               </>
+            ),
+         },
+         {
+            key: "2",
+            label: "Mandate execution successful",
+            content: (
+               <>
+                     <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
@@ -59,11 +71,17 @@ visible_in_sidebar: true
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Execute Failed
-
-<CodeBlockWithCopy language="json">
+                    </CodeBlockWithCopy>
+               </>
+            ),
+         },
+         {
+            key: "3",
+            label: "Mandate execution failed",
+            content: (
+               <>
+                     <Text>This is sent if mandate could not be created, due to some error or no authorisation from customer.</Text>
+                     <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
@@ -86,4 +104,9 @@ visible_in_sidebar: true
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
+                     </CodeBlockWithCopy>
+               </>
+            ),
+         },
+   ]}
+/>
