--- a/content/payments/umap/notifications/mandates/notify.mdx
+++ b/content/payments/umap/notifications/mandates/notify.mdx
@@ -1,15 +1,22 @@
 ---
 sidebar_title: Notify
-page_title: UMAP - Notifications & Alerts - Mandate Pre Debit Notify
+page_title: UMAP - Notifications and alerts - Mandate pre-debit notifications
 order: 6
 visible_in_sidebar: true
 ---
 
-## Mandate Notify Operation Notifications & Alerts
+## Notifications and alerts for mandate pre-debit notify action
 
-### Mandate Notify Success
+These are the available webhooks for merchants, when they notify their customers before mandate execution.
 
-<CodeBlockWithCopy language="json">
+<Tabs
+   tabs={[
+         {
+            key: "1",
+            label: "Mandate pre-debit notification successful",
+            content: (
+               <>
+                  <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
@@ -32,11 +39,16 @@ visible_in_sidebar: true
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Notify Failed
-
-<CodeBlockWithCopy language="json">
+                  </CodeBlockWithCopy>
+               </>
+            ),
+         },
+         {
+            key: "2",
+            label: "Mandate pre-debit notification failed",
+            content: (
+               <>
+                     <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
@@ -59,4 +71,9 @@ visible_in_sidebar: true
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
+                    </CodeBlockWithCopy>
+               </>
+            ),
+         },
+   ]}
+/>
