--- a/content/payments/umap/notifications/mandates/revoke.mdx
+++ b/content/payments/umap/notifications/mandates/revoke.mdx
@@ -1,27 +1,37 @@
 ---
 sidebar_title: Revoke
-page_title: UMAP - Notifications & Alerts - Mandate Revoke
+page_title: UMAP - Notifications and alerts - Revoking mandate
 order: 3
 visible_in_sidebar: true
 ---
 
-## Mandate Revoke Operation Notifications & Alerts
-
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates/generic/revoke">UPI Mandates Revoke ↗</a>
-</Card>
+## Notifications and alerts for revoking mandate
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates/generic/revoke">🌟 UPI mandate revoke ↗</a>
 
 <hr class="primary" />
 
-### Mandate Revoke Initiated
+These are the available webhooks for merchants, when revoking of mandate is done by either the customer or in rarer cases, the merchant.
 
-This notification will be sent only in case the revoke is initiated by the end user.
-
-<CodeBlockWithCopy language="json">
-    {`{
+<Tabs
+   tabs={[
+         {
+            key: "1",
+            label: "Mandate revoke initiated",
+            content: (
+                <>
+                    <Text>
+                        This notification will be sent only in case the revoke is initiated by the end user. The following param values indicate this state—
+                        <ul>
+                            <li><code>operation</code> will be <code>revoke</code></li>
+                            <li><code>eventType</code> will be <code>mandate_operation.revoke.initiated</code></li>
+                            <li><code>status</code> will be <code>initiated</code></li>
+                        </ul>
+                    </Text>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -40,12 +50,25 @@ This notification will be sent only in case the revoke is initiated by the end u
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Revoke Success
-
-<CodeBlockWithCopy language="json">
-    {`{
+                   </CodeBlockWithCopy>
+                </>
+            ),
+        },
+        {
+            key: "2",
+            label: "Mandate revoke successful",
+            content: (
+                <>
+                    <Text>
+                        The following param values indicate this state—
+                        <ul>
+                            <li><code>operation</code> will be <code>revoke</code></li>
+                            <li><code>eventType</code> will be <code>mandate_operation.revoke.success</code></li>
+                            <li><code>status</code> will be <code>success</code></li>
+                        </ul>
+                    </Text>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -64,12 +87,25 @@ This notification will be sent only in case the revoke is initiated by the end u
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Revoke Failed
-
-<CodeBlockWithCopy language="json">
-    {`{
+                    </CodeBlockWithCopy>
+                </>
+            ),
+         },
+         {
+            key: "3",
+            label: "Mandate revoke failed",
+            content: (
+                <>
+                    <Text>
+                        The following param values indicate this state—
+                        <ul>
+                            <li><code>operation</code> will be <code>revoke</code></li>
+                            <li><code>eventType</code> will be <code>mandate_operation.revoke.failed</code></li>
+                            <li><code>status</code> will be <code>failed</code></li>
+                        </ul>
+                    </Text>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -88,4 +124,9 @@ This notification will be sent only in case the revoke is initiated by the end u
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
+                    </CodeBlockWithCopy>
+                </>
+            ),
+        },
+    ]}
+/>
