--- a/content/payments/umap/notifications/mandates/unpause.mdx
+++ b/content/payments/umap/notifications/mandates/unpause.mdx
@@ -1,25 +1,35 @@
 ---
 sidebar_title: Unpause
-page_title: UMAP - Notifications & Alerts - Mandate Unpause
+page_title: UMAP - Notifications and alerts - Unpausing mandate
 order: 5
 visible_in_sidebar: true
 ---
-
-## Mandate Unpause Operation Notifications & Alerts
-
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates/generic/unpause">UPI Mandates Unpause ↗</a>
-</Card>
+## Notifications and alerts for unpausing mandate (initiated by customer)
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates/generic/unpause">🌟 UPI mandate unpause ↗</a>
 
 <hr class="primary" />
 
-### Mandate Unpause Initiated
+These are the available webhooks for merchants, when their customer unpauses their mandate.
 
-<CodeBlockWithCopy language="json">
-    {`{
+<Tabs
+   tabs={[
+         {
+            key: "1",
+            label: "Mandate unpause initiated",
+            content: (
+                <>
+                    <Text>
+                        The following param values indicate this state—
+                        <ul>
+                            <li><code>eventType</code> will be <code>mandate_operation.unpause.initiated</code></li>
+                            <li><code>status</code> will be <code>initiated</code></li>
+                        </ul>
+                    </Text>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -38,12 +48,24 @@ visible_in_sidebar: true
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Unpause Success
-
-<CodeBlockWithCopy language="json">
-    {`{
+                    </CodeBlockWithCopy>
+                </>
+            ),
+         },
+         {
+            key: "2",
+            label: "Mandate unpause successful",
+            content: (
+                <>
+                    <Text>
+                        The following param values indicate this state—
+                        <ul>
+                            <li><code>eventType</code> will be <code>mandate_operation.unpause.success</code></li>
+                            <li><code>status</code> will be <code>success</code></li>
+                        </ul>
+                    </Text>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -62,12 +84,24 @@ visible_in_sidebar: true
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Unpause Failed
-
-<CodeBlockWithCopy language="json">
-    {`{
+                    </CodeBlockWithCopy>
+                </>
+            ),
+         },
+         {
+            key: "3",
+            label: "Mandate unpause failed",
+            content: (
+               <>
+                    <Text>
+                        The following param values indicate this state—
+                        <ul>
+                            <li><code>eventType</code> will be <code>mandate_operation.unpause.failed</code></li>
+                            <li><code>status</code> will be <code>failed</code></li>
+                        </ul>
+                    </Text>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -86,4 +120,10 @@ visible_in_sidebar: true
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
+                     </CodeBlockWithCopy>
+               </>
+            ),
+         },
+   ]}
+/>
+
