--- a/content/payments/umap/notifications/mandates/update.mdx
+++ b/content/payments/umap/notifications/mandates/update.mdx
@@ -1,29 +1,37 @@
 ---
 sidebar_title: Update
-page_title: UMAP - Notifications & Alerts - Mandate Update
+page_title: UMAP - Notifications and alerts - Updating mandate
 order: 2
 visible_in_sidebar: true
 ---
 
-## Mandate Update Operation Notifications & Alerts
-
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates/generic/update">UPI Mandates Update ↗</a>
-</Card>
+## Notifications and alerts for updating mandate
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates/generic/update">🌟 UPI mandate update ↗</a>
 
 <hr class="primary" />
 
 Merchant webhooks for mandates being updated through UMAP.
 
-### Mandate Update Initiated
-
-This notification will only be triggered in case the mandate is updated via Intent link/QR.
-
-<CodeBlockWithCopy language="json">
-    {`{
+<Tabs
+   tabs={[
+         {
+            key: "1",
+            label: "Mandate update initiated",
+            content: (
+                <>
+                    <Text>
+                        This notification will only be triggered in case the mandate is updated via intent link/QR. The following param values indicate this state—
+                        <ul>
+                            <li><code>operation</code> will be <code>update</code></li>
+                            <li><code>eventType</code> will be <code>mandate_operation.update.initiated</code></li>
+                            <li><code>status</code> will be <code>initiated</code></li>
+                        </ul>
+                    </Text>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -45,14 +53,25 @@ This notification will only be triggered in case the mandate is updated via Inte
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Update Success
-
-This webhook is triggered once UMAP knows the status of the mandate update process.
-
-<CodeBlockWithCopy language="json">
-    {`{
+                   </CodeBlockWithCopy>
+                </>
+            ),
+        },
+        {
+            key: "2",
+            label: "Mandate update successful",
+            content: (
+                <>
+                    <Text>
+                        This webhook is triggered once UMAP knows the status of the mandate update process. The following param values indicate this state—
+                        <ul>
+                            <li><code>operation</code> will be <code>update</code></li>
+                            <li><code>eventType</code> will be <code>mandate_operation.update.success</code></li>
+                            <li><code>status</code> will be <code>success</code></li>
+                        </ul>
+                    </Text>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -74,14 +93,25 @@ This webhook is triggered once UMAP knows the status of the mandate update proce
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Update Failed
-
-This webhook is triggered once UMAP knows the status of the mandate update process.
-
-<CodeBlockWithCopy language="json">
-    {`{
+                    </CodeBlockWithCopy>
+                </>
+            ),
+         },
+         {
+            key: "3",
+            label: "Mandate update failed",
+            content: (
+                <>
+                    <Text>
+                        This webhook is triggered once UMAP knows the status of the mandate update process. The following param values indicate this state—
+                        <ul>
+                            <li><code>operation</code> will be <code>update</code></li>
+                            <li><code>eventType</code> will be <code>mandate_operation.update.failed</code></li>
+                            <li><code>status</code> will be <code>failed</code></li>
+                        </ul>
+                    </Text>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -103,4 +133,9 @@ This webhook is triggered once UMAP knows the status of the mandate update proce
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
+                    </CodeBlockWithCopy>
+                </>
+            ),
+        },
+    ]}
+/>
