--- a/content/payments/umap/notifications/mandates/create.mdx
+++ b/content/payments/umap/notifications/mandates/create.mdx
@@ -1,88 +1,120 @@
 ---
 sidebar_title: Create
-page_title: UMAP - Notifications & Alerts - Mandate Create
+page_title: UMAP - Notifications and alerts - Creation of mandate
 order: 1
 visible_in_sidebar: true
 ---
 
-## Mandate Create Operation Notifications & Alerts
+## Notifications and alerts for creation of mandate
 
-The merchant webhooks for mandates being registered through UMAP.
+These are the available webhooks for merchants, when they register mandates being registered through UMAP.
 
-### Mandate Create Initiated
-
-This notification will only be triggered in case the mandate is being created via Intent link/QR.
-
-<CodeBlockWithCopy language="json">
+<Tabs
+   tabs={[
+         {
+            key: "1",
+            label: "Mandate creation initiated",
+            content: (
+               <>
+                  <Text>This indicates that a mandate creation request has been initiated by a customer or the merchant.</Text>
+                    <CodeBlockWithCopy language="json">
 {`{
-   // Event attributes
-   "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
+   // -----------------
+   // MERCHANT DETAILS
+   // -----------------
+   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+   "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+   // -----------------
+   // EVENT ATTRIBUTES
+   // -----------------
+   "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Unique ID for the event
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
    "eventType": "mandate_operation.create.initiated",
    "resource": "mandate_operation",
-   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // mandate operation id
-   "operation": "create", // create | update | revoke | notify | execute
-   "status": "initiated", // initiated | success | failed
-   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-   "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-   // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
-   // Mandate reference
+   "operation": "create", // Can be create | update | revoke | notify | execute
+   "status": "initiated", // Can be initiated | success | failed
+   // -----------------
+   // MANDATE CONTEXT
+   // -----------------
+   "mandateType": "<type>", // TODO: what are the types?
+   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Unique ID for mandate operation
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
-   // Reason
-   "reason": {}
+   "reason": {} // sample mentioned above
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Create Success
-
-This webhook is triggered once UMAP knows the status of the mandate creation process.
-
-<CodeBlockWithCopy language="json">
+                    </CodeBlockWithCopy>
+               </>
+            ),
+         },
+         {
+            key: "2",
+            label: "Mandate creation successful",
+            content: (
+               <>
+                     <Text>This indicates that the customer has received and authorised the mandate request, so the mandate is now active and will be used to collect payments from the customer accordingly to the rules of the mandate.</Text>
+                     <CodeBlockWithCopy language="json">
 {`{
-   // Event attributes
-   "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
+   // -----------------
+   // MERCHANT DETAILS
+   // -----------------
+   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+   "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+   // -----------------
+   // EVENT ATTRIBUTES
+   // -----------------
+   "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Unique ID for the event
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
    "eventType": "mandate_operation.create.success",
    "resource": "mandate_operation",
-   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // mandate operation id
-   "operation": "create", // create | update | revoke | notify | execute
-   "status": "success", // initiated | success | failed
-   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-   "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-   // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
-   // Mandate reference
+   "operation": "create", // Can be create | update | revoke | notify | execute
+   "status": "success", // Can be initiated | success | failed
+   // -----------------
+   // MANDATE CONTEXT
+   // -----------------
+   "mandateType": "<type>", // TODO: what are the types?
+   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Unique ID for mandate operation
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
-   // Reason
-   "reason": {}
+   "reason": {} // sample mentioned above
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Create Failed
-
-This webhook is triggered once UMAP knows the status of the mandate creation process.
-
-<CodeBlockWithCopy language="json">
+                    </CodeBlockWithCopy>
+               </>
+            ),
+         },
+         {
+            key: "3",
+            label: "Mandate creation failed",
+            content: (
+               <>
+                     <Text>This is sent if mandate could not be created, due to some error or no authorisation from customer.</Text>
+                     <CodeBlockWithCopy language="json">
 {`{
-   // Event attributes
-   "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
+   // -----------------
+   // MERCHANT DETAILS
+   // -----------------
+   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+   "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+   // -----------------
+   // EVENT ATTRIBUTES
+   // -----------------
+   "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Unique ID for the event
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
    "eventType": "mandate_operation.create.failed",
    "resource": "mandate_operation",
-   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // mandate operation id
-   "operation": "create", // create | update | revoke | notify | execute
-   "status": "failed", // initiated | success | failed
-   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-   "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-   // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
-   // Mandate reference
+   "operation": "create", // Can be create | update | revoke | notify | execute
+   "status": "failed", // Can be initiated | success | failed
+   // -----------------
+   // MANDATE CONTEXT
+   // -----------------
+   "mandateType": "<type>", // TODO: what are the types?
+   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Unique ID for mandate operation
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
-   // Reason
-   "reason": {}
+   "reason": {} // sample mentioned above
 }`}
-</CodeBlockWithCopy>
+                     </CodeBlockWithCopy>
+               </>
+            ),
+         },
+   ]}
+/>
