--- a/content/payments/umap/notifications/mandates/pause.mdx
+++ b/content/payments/umap/notifications/mandates/pause.mdx
@@ -1,25 +1,36 @@
 ---
 sidebar_title: Pause
-page_title: UMAP - Notifications & Alerts - Mandate Pause
+page_title: UMAP - Notifications and alerts - Pausing mandate
 order: 4
 visible_in_sidebar: true
 ---
 
-## Mandate Pause Operation Notifications & Alerts
-
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates/generic/pause">UPI Mandates Pause ↗</a>
-</Card>
+## Notifications and alerts for pausing mandate (initiated by customer)
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates/generic/pause">🌟 UPI mandate pause ↗</a>
 
 <hr class="primary" />
 
-### Mandate Pause Initiated
+These are the available webhooks for merchants, when their customers attempt to pause their mandate (which can be a temporary action).
 
-<CodeBlockWithCopy language="json">
-    {`{
+<Tabs
+   tabs={[
+         {
+            key: "1",
+            label: "Mandate pause initiated",
+            content: (
+                <>
+                    <Text>
+                        The following param values indicate this state—
+                        <ul>
+                            <li><code>eventType</code> will be <code>mandate_operation.pause.initiated</code></li>
+                            <li><code>status</code> will be <code>initiated</code></li>
+                        </ul>
+                    </Text>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -38,12 +49,24 @@ visible_in_sidebar: true
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Pause Success
-
-<CodeBlockWithCopy language="json">
-    {`{
+                   </CodeBlockWithCopy>
+                </>
+            ),
+        },
+        {
+            key: "2",
+            label: "Mandate pause successful",
+            content: (
+                <>
+                    <Text>
+                        The following param values indicate this state—
+                        <ul>
+                            <li><code>eventType</code> will be <code>mandate_operation.pause.success</code></li>
+                            <li><code>status</code> will be <code>success</code></li>
+                        </ul>
+                    </Text>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -62,12 +85,24 @@ visible_in_sidebar: true
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Mandate Pause Failed
-
-<CodeBlockWithCopy language="json">
-    {`{
+                    </CodeBlockWithCopy>
+                </>
+            ),
+         },
+         {
+            key: "3",
+            label: "Mandate pause failed",
+            content: (
+                <>
+                    <Text>
+                        The following param values indicate this state—
+                        <ul>
+                            <li><code>eventType</code> will be <code>mandate_operation.pause.failed</code></li>
+                            <li><code>status</code> will be <code>failed</code></li>
+                        </ul>
+                    </Text>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -86,4 +121,9 @@ visible_in_sidebar: true
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
+                    </CodeBlockWithCopy>
+                </>
+            ),
+        },
+    ]}
+/>
