Update some text for Merchant on-boarding pages

--- a/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
+++ b/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
@@ -5,8 +5,14 @@ order: 2
 visible_in_sidebar: true
 ---
 
+<Callout type="warning">
+    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments">UPI payments</a> or <a href="/payments/umap/mandates">UPI payments</a>.
+</Callout>
+
+<br/>
+
 ## Check availability of VPA 
-VPAs act as unique identifiers for merchants in the UPI ecosystem, so it is highly recommended that you check VPA validity before assigning it to a merchant, to avoid conflicts. 
+This is an optional step. However, VPAs act as unique identifiers for merchants in the UPI ecosystem, so it is highly recommended that you check VPA validity before assigning it to a merchant, to avoid conflicts. 
 
 Use the following API to check if it is already associated with another merchant or not.
 
