--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -13,6 +13,13 @@ visible_in_sidebar: true
 <a href="/payments/umap/quickstart/aggregators" target="_blank">🌟 Aggregator quickstart ↗</a><br/>
 <a href="/payments/umap/api-integration/aggregators" target="_blank">🌟 Start API integration for aggregators ↗</a>
 
+<br/>
+<br/>
+
+<Callout type="warning">
+    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments">UPI payments</a> or <a href="/payments/umap/mandates">UPI payments</a>.
+</Callout>
+
 <hr class="primary" />
 
 #### Steps to on-board a merchant
