--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -5,6 +5,12 @@ order: 3
 visible_in_sidebar: true
 ---
 
+<Callout type="warning">
+    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments">UPI payments</a> or <a href="/payments/umap/mandates">UPI payments</a>.
+</Callout>
+
+<br/>
+
 ## Create and assign VPA
 This API can be used to assign a VPA to a merchant, which will serve as the merchant identifier for all participants in the UPI ecosystem.
 
