Refine Notifications and alerts section

--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -12,12 +12,12 @@ visible_in_sidebar: true
 </Text>
 <a href="/payments/umap/quickstart">🌟 Quickstart ↗</a>
 
-<br/>
+<hr class="primary" />
 
 UMAP has a robust notification system to provide a transparent experience for our merchants.
 
--   <p>Repetitive retries to ensure notification delivery to customers</p>
--   <p>Comprehensive coverage across all financial and non-financial flows</p>
+-   <p>Retries to ensure notification delivery to customers</p>
+-   <p>Coverage of statuses across all financial and non-financial flows</p>
 -   <p>Configurable notification endpoints at merchant and aggregator levels</p>
 
 Understand the notification payloads for each of our products—
