--- a/content/payments/umap/notifications/customer-vpa-verification.mdx
+++ b/content/payments/umap/notifications/customer-vpa-verification.mdx
@@ -1,23 +1,30 @@
 ---
 sidebar_title: VPA verification
-page_title: UMAP - Notifications & Alerts - Customer VPA verification
+page_title: UMAP - Notifications and alerts - Customer VPA verification
 order: 5
 visible_in_sidebar: true
 ---
 
-## Customer VPA Verification Notifications & Alerts
+## Notifications and alerts for customer VPA verification
+These statuses are relevant for the VPA verification done under the <a href="/payments/umap/payments/collect-request">UPI payments collect request</a> product.
 
-### Verification Statuses
+### Details for customer VPA verification statuses
+<Text>
+   <ul>
+      <li><code>customer_vpa.valid</code>&nbsp;Provided VPA is valid and associated with a bank account</li>
+      <li><code>customer_vpa.invalid</code>&nbsp;Provided VPA is invalid and account details could not be fetched</li>
+      <li><code>customer_vpa.failed</code>&nbsp;Failed to fetch VPA details</li>
+   </ul>
+</Text>
 
-`Customer VPA Valid: ` VPA provided is valid and associated with a bank account
-
-`Customer VPA Invalid: ` VPA provided is invalid and account details could not be fetched
-
-`Customer VPA Failed: ` Failed to fetch vpa details
-
-### VPA Valid
-
-<CodeBlockWithCopy language="json">
+<Tabs
+   tabs={[
+         {
+            key: "1",
+            label: "VPA is valid",
+            content: (
+               <>
+                  <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
@@ -34,11 +41,16 @@ visible_in_sidebar: true
    "reason": {}
 }
 `}
-</CodeBlockWithCopy>
-
-### VPA Invalid
-
-<CodeBlockWithCopy language="json">
+                  </CodeBlockWithCopy>
+               </>
+            ),
+         },
+         {
+            key: "2",
+            label: "VPA is invalid",
+            content: (
+               <>
+                     <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
@@ -52,11 +64,16 @@ visible_in_sidebar: true
    "customerVpa": "deku20231030@okokaxis",
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Verification Failed
-
-<CodeBlockWithCopy language="json">
+                     </CodeBlockWithCopy>
+               </>
+            ),
+         },
+         {
+            key: "3",
+            label: "VPA verification failed",
+            content: (
+               <>
+                     <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
@@ -70,4 +87,9 @@ visible_in_sidebar: true
    "customerVpa": "deku20231030@okokaxis",
    "reason": {}
 }`}
-</CodeBlockWithCopy>
+                     </CodeBlockWithCopy>
+               </>
+            ),
+         },
+   ]}
+/>
