--- a/content/payments/umap/notifications/disputes.mdx
+++ b/content/payments/umap/notifications/disputes.mdx
@@ -1,44 +1,40 @@
 ---
 sidebar_title: Disputes
-page_title: UMAP - Notifications & Alerts - Disputes
+page_title: UMAP - Notifications and alerts - Disputes
 order: 4
 visible_in_sidebar: true
 ---
 
-## Disputes Notifications & Alerts
+## Notifications and alerts for disputes
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/refunds-disputes">Refunds & Disputes ↗</a>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/refunds-disputes">🌟 Refunds and disputes ↗</a>
 
 <hr class="primary" />
 
-#### Dispute Statuses
-
-`Dispute Open :` A dispute has been created by a customer.
-
-`Dispute Closed :` Merchant accepted dispute and issued a refund.
-
-`Dispute In-Review :` Merchant has contested dispute and has provided evidence.
-
-`Dispute Won :` Merchant evidence accepted. No chargeback required.
-
-`Dispute Lost :` Merchant evidence rejected. Chargeback is created.
-
-The UMAP platform's seamless integration with the UDIR framework ensures that merchants can provide prompt and efficient resolutions to disputes, safeguarding both their interests and those of their customers.
-
+### Details for dispute statuses
+The UMAP platform's seamless integration with the UDIR framework ensures that merchants can provide prompt and efficient resolutions to disputes, safeguarding both their interests and those of their customers. 
 <img
     src="https://storage.googleapis.com/strapi-assets/latest/Frame_73/Frame_73.png"
     alt="Bridge"
 />
 
-### Dispute Created
+The statuses are consistent across all UMAP products—
+<Text>
+    <ul>
+        <li><code>Dispute.open</code>&nbsp;A dispute has been raised by a customer, against a payment they did before</li>
+        <li><code>Dispute.closed</code>&nbsp;The merchant has accepted the dispute claim from customer, and issued a refund</li>
+        <li><code>Dispute.in-review</code>&nbsp;The merchant has contested the dispute claim from customer, and provided evidence of goods/service delivery</li>
+        <li><code>Dispute.won</code>&nbsp;Merchant evidence is accepted and no refund is required</li>
+        <li><code>Dispute.lost</code>&nbsp;Merchant evidence is rejected and a refund is issued automatically</li>
+    </ul>
+</Text>
 
+Details of dispute creation—
 <CodeBlockWithCopy language="json">
-    {`{
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
