--- a/content/payments/umap/notifications/payments.mdx
+++ b/content/payments/umap/notifications/payments.mdx
@@ -1,40 +1,37 @@
 ---
 sidebar_title: Payments
-page_title: UMAP - Notifications & Alerts - Payments
+page_title: UMAP - Notifications and alerts - Payments
 order: 1
 visible_in_sidebar: true
 ---
 
-## Payments Notifications & Alerts
+## Notifications and alerts for payments
 
-UMAP has consistent and transparent payment statuses across all transaction flows.  
-
-`Payment Initiated :` Payment has been attempted by a customer. 
-
-`Payment Pending :` Payment is currently being processed by UMAP. 
-
-`Payment Successful :` Payment has been successful completed. 
-
-`Payment Failed :` Payment could not be processed. 
-
+Any UMAP product relies on creating and presenting payment request to a customer. Setu’s UMAP stack provides consistent and transparent payment statuses for a merchant, to be able to track the life-cycle of a payment request. These statuses are shown in the diagram below.
 <img
   src="https://storage.googleapis.com/strapi-assets/latest/Frame_72/Frame_72.png"
   alt="Bridge"
 />
 
-### Payment Initiated
+### Details for each payment status
 
-This is the webhook notification which is sent to the merchant when a payment is initiated
-
-<CodeBlockWithCopy language="json">
+<Tabs
+   tabs={[
+         {
+            key: "1",
+            label: "Payment initiated",
+            content: (
+               <>
+                  <Text>This indicates that a payment has been initiated by a customer, and the notification is only then sent to the merchant.</Text>
+                  <CodeBlockWithCopy language="json">
 {`{
+   // Resource
+   "resource": "payment",
+   "status": "initiated",
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
    "eventType": "payment.initiated",
-   // Resource
-   "resource": "payment",
-   "status": "initiated",
    // Payment context
    "productInstanceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "productInstanceType": "<TYPE>", // collect | intent | mandate (seems like there are 12 types, might have to change this later)
@@ -57,13 +54,17 @@ This is the webhook notification which is sent to the merchant when a payment is
    // Reason
    "reason": {} // sample mentioned above
 }`}
-</CodeBlockWithCopy>
-
-### Payment Pending
-
-This is the webhook notification which is sent to the merchant in case of a deemed transaction. Please note that this is not a terminal status. post which we will send a second notification for the same transaction.  The notification is shared below - 
-
-<CodeBlockWithCopy language="json">
+                  </CodeBlockWithCopy>
+               </>
+            ),
+         },
+         {
+            key: "2",
+            label: "Payment pending",
+            content: (
+               <>
+                     <Text>This indicates that the payment is being processed by UMAP and is sent to the merchant in case of a deemed transaction. {" "}Note that, <strong>this is not a terminal status</strong>, and Setu will send other updated notifications for the same transaction.</Text>
+                     <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
@@ -96,13 +97,17 @@ This is the webhook notification which is sent to the merchant in case of a deem
    // Reason
    "reason": {} // sample mentioned above
 }`}
-</CodeBlockWithCopy>
-
-### Payment Success
-
-This is the webhook notification which is sent to the merchant in case of a successful payment 
-
-<CodeBlockWithCopy language="json">
+                     </CodeBlockWithCopy>
+               </>
+            ),
+         },
+         {
+            key: "3",
+            label: "Payment success",
+            content: (
+               <>
+                     <Text>This is sent to the merchant once a payment has been successfully completed.</Text>
+                     <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
@@ -135,13 +140,17 @@ This is the webhook notification which is sent to the merchant in case of a succ
    // Reason
    "reason": {} // sample mentioned above
 }`}
-</CodeBlockWithCopy>
-
-### Payment Failed
-
-This is the webhook notification which is sent to the merchant in case of a failed payment. The notification is shared below -
-
-<CodeBlockWithCopy language="json">
+                     </CodeBlockWithCopy>
+               </>
+            ),
+         },
+         {
+            key: "4",
+            label: "Payment failed",
+            content: (
+               <>
+                     <Text>This is sent to the merchant if a payment could not be processed and has been marked as failed.</Text>
+                     <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
@@ -173,6 +182,10 @@ This is the webhook notification which is sent to the merchant in case of a fail
    "customerAccountType": "SAVINGS", // SAVINGS, CREDIT,...
    // Reason
    "reason": {} // sample mentioned above
-}
-`}
-</CodeBlockWithCopy>
+}`}
+                     </CodeBlockWithCopy>
+               </>
+            ),
+         },
+   ]}
+/>
