--- a/content/payments/umap/notifications/refunds.mdx
+++ b/content/payments/umap/notifications/refunds.mdx
@@ -1,41 +1,47 @@
 ---
 sidebar_title: Refunds
-page_title: UMAP - Notifications & Alerts - Refunds
+page_title: UMAP - Notifications and alerts - Refunds
 order: 3
 visible_in_sidebar: true
 ---
 
-## Refunds Notifications & Alerts
+## Notifications and alerts for refunds
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/refunds-disputes">Refunds & Disputes ↗</a>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/refunds-disputes">🌟 Refunds and disputes ↗</a>
 
 <hr class="primary" />
 
-### Refund Statuses
+### Details for refund statuses
+UMAP equips merchants with a straightforward API-based mechanism. to process refunds directly to the customer's bank account that was originally used for the transaction. This capability not only enhances customer satisfaction through quick and efficient refunds but also streamlines dispute resolution. 
 
-UMAP equips merchants with a straightforward, API-based mechanism to process refunds directly to the customer's bank account originally used for the transaction. This capability not only enhances customer satisfaction through quick and efficient refunds but also streamlines dispute resolution.
+The statuses are consistent across all UMAP products—
+<Text>
+    <ul>
+        <li><code>refund.initiated</code>&nbsp;Refund request has been create at UMAP</li>
+        <li><code>refund.pending</code>&nbsp;Refund is in queue to be processed</li>
+        <li><code>refund.successful</code>&nbsp;Refund has been successfully completed</li>
+        <li><code>refund.failed</code>&nbsp;Refund could not be processed</li>
+    </ul>
+</Text>
 
-#### Refund Statuses
-
-`Refund Initiated :` Refund request has been create at UMAP<br/><br/>
-`Refund Pending :` Refund is in queue for being processed<br/><br/>
-`Refund Successful :` Refund has been successfully completed<br/><br/>
-`Refund Failed :` Refund could not be processed<br/><br/>
-
+Here is the life-cycle for refund statuses—
 <img
     src="https://storage.googleapis.com/strapi-assets/latest/Frame_74/Frame_74.png"
     alt="Bridge"
 />
 
-### Refund Success
-
-<CodeBlockWithCopy language="json">
-    {`{
+<Tabs
+   tabs={[
+         {
+            key: "1",
+            label: "Refund success",
+            content: (
+                <>
+                   <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -60,12 +66,17 @@ UMAP equips merchants with a straightforward, API-based mechanism to process ref
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
-
-### Refund Failed
-
-<CodeBlockWithCopy language="json">
-    {`{
+                   </CodeBlockWithCopy>
+                </>
+            ),
+         },
+         {
+            key: "2",
+            label: "Refund failed",
+            content: (
+                <>
+                    <CodeBlockWithCopy language="json">
+{`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -90,4 +101,9 @@ UMAP equips merchants with a straightforward, API-based mechanism to process ref
    // Reason
    "reason": {}
 }`}
-</CodeBlockWithCopy>
+                    </CodeBlockWithCopy>
+                </>
+            ),
+         },
+   ]}
+/>
