Update smaller text changes across UMAP docs

--- a/content/payments/umap/notifications/mandates/create.mdx
+++ b/content/payments/umap/notifications/mandates/create.mdx
@@ -7,7 +7,7 @@ visible_in_sidebar: true
 
 ## Notifications and alerts for creation of mandate
 
-These are the available webhooks for merchants, when they register mandates being registered through UMAP.
+These are the available webhooks for merchants, when they create mandates through UMAP.
 
 <Tabs
    tabs={[
