--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -5,12 +5,12 @@ order: 3
 visible_in_sidebar: true
 ---
 
-# UPI Payments
+## UPI payments
 
 Unified Payments Interface (UPI) is a real-time payment system developed by the National Payments Corporation of India that facilitates inter-bank transactions through a mobile app. 
 
-## What can you do with UMAP Payments?
-Choose one or more of our products under the UMAP Payments stack to
+### What can you do with this product?
+Choose one or more of our products under the UMAP Payments stack to—
 
 - Re-target churning D2C customers with payment links in messaging campaigns
 - Enable web-based checkouts by using a customer VPA input on your website to trigger a collection flow
@@ -21,7 +21,7 @@ Choose one or more of our products under the UMAP Payments stack to
 
 <hr class="primary" />
 
-## Core concepts for Payment products
+### Core concepts for Payment products
 UMAP relies on a few features that persist across various products offered under the **Payments** stack. These have been listed below.
 
 <br/>
