--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -18,15 +18,13 @@ This guide will help you get started with UMAP integration as an **aggregator**.
 
 <br />
 
-#### Who is an aggregator?
+### Who is an aggregator?
 
 An aggregator on UMAP is a large merchant platform that on-boards multiple merchants under them. It can be an online platform or large businesses that operate franchisees. An aggregator on UMAP has the ability to configure and control how their merchants process payments, like by enabling different payment methods, settlement accounts and notifications.
 
-Are you not an Aggregator? Please refer to the [Merchant quickstart](/payments/umap/quickstart) instead.
-
 <hr class="primary" />
 
-#### Get started
+### Get started
 
 ###### Step 1 — Start KYC and business documentation
 
