--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -7,12 +7,12 @@ visible_in_sidebar: true
 
 # Refunds and disputes
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text weight="600">
-        Prerequisites:&nbsp;
-        <a href="/payments/umap/quickstart" target="_blank">Quickstart ↗</a>
-    </Text>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/quickstart">🌟 Quickstart ↗</a>
+
+<hr class="primary" />
 
 UMAP empowers merchants with direct API access to issue refunds and contest disputes efficiently, by leveraging NPCI's default framework. This streamlines communication and resolution processes, ensuring merchants have control and visibility over transaction reversals and customer disputes, which in turn helps to resolve customer issues and maintain high levels of satisfaction.
 
