--- a/content/payments/umap/quickstart.mdx
+++ b/content/payments/umap/quickstart.mdx
@@ -9,38 +9,40 @@ visible_in_sidebar: true
 
 This guide is for you to get started quickly with UMAP, and to select the combination of products that work best for your business. If you want to understand more about what UMAP is, do read about UMAP in the <a href="/payments/umap/overview">Overview</a> page.
 
+<br/>
+
 #### What can I do with UMAP?
 
-UMAP caters to two specific categories of businesses—**Merchants** and **Aggregators**. Before you dive into UMAP product suite, explore which category you belong to.
+UMAP caters to two specific categories of businesses—**Aggregators** and **Merchants**. Before you dive into UMAP product suite, explore which category you belong to.
 
 <table>
     <tr>
-        <th><Text as="h4" align="center">Merchants</Text></th>
         <th><Text as="h4" align="center">Aggregators</Text></th>
+        <th><Text as="h4" align="center">Merchants</Text></th>
     </tr>
     <tr>
         <td>
-            <Text>Merchants are online/offline businesses that provide goods and services directly to customers. Some examples include—</Text>
+            <Text>Aggregators are online/offline platforms that on-board multiple businesses and provide them value added services. Some examples include—</Text>
             <Text marginBottom="nano">
-                1. Loan providers who enable customers to get credit into their account and enable collections for repayment.
+                1. A food delivery app that onboards multiple restaurants, and enabled delivery services for them.
             </Text>
             <Text marginBottom="nano">
-                2. Direct to Consumer Brands who want to enable UPI as a payment option on their website/app or messaging channels.
+                2. Website creation platform with a storefront, that plugin providers can integrate with.
             </Text>
             <Text marginBottom="nano">
-                3. Streaming platforms who provide online services for education & entertainment through subscriptions & one time plans.
+                3. Insurance and loan marketplaces that can be used by any distributors to sell to customers.
             </Text>
         </td>
         <td>
-            <Text>Aggregators are online/offline platforms that on-board multiple businesses and provide them value added services. Some examples include—</Text>
+            <Text>Merchants are online/offline businesses that provide goods and services directly to customers. Some examples include—</Text>
             <Text marginBottom="nano">
-                1. Food delivery app that onboards multiple restaurants and provides delivery riders for them.
+                1. Loan providers who enable customers to get credit in their account and enable collections for repayment.
             </Text>
             <Text marginBottom="nano">
-                2. Website creation platform that has a storefront that plugin providers can integrate.
+                2. Direct-to-consumer brands that want to enable UPI as a payment option on their website/app or other messaging channels.
             </Text>
             <Text marginBottom="nano">
-                3. Insurance and Loan marketplaces that can be used by any distributors to sell to customers.
+                3. Streaming platforms that provide online services for education or entertainment through subscriptions and one-time plans.
             </Text>
         </td>
     </tr>
@@ -51,24 +53,18 @@ UMAP caters to two specific categories of businesses—**Merchants** and **Aggre
 #### Choose how to integrate
 <Row>
     <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <Link href="/payments/umap/quickstart/merchants">Integrate as a Merchant</Link>
-            <p>
-                Use this section to proceed with integration of UMAP as
-                Merchants
-            </p>
-        </Card>
+        <a href="/payments/umap/quickstart/aggregators">
+            <Card padding="small" shape="rounded">
+                Integrate as an aggregator
+            </Card>
+        </a>
     </Portion>
     <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <Link href="/payments/umap/quickstart/aggregators">
-                Integrate as an Aggregator
-            </Link>
-            <p>
-                Use this section to proceed with integration of UMAP as
-                Aggregators
-            </p>
-        </Card>
+        <a href="/payments/umap/quickstart/merchants">
+            <Card padding="small" shape="rounded">
+                Integrate as a merchant
+            </Card>
+        </a>
     </Portion>
 </Row>
 
