--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -62,8 +62,7 @@ An API to generate access tokens, which are used to authorise any other API requ
 
 <CodeBlockWithCopy language="json">
     {`{
-  "access_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3NfdG9rZW4iOiJhY2Nlc3NfdG9rZW4iLCJyZWZyZXNoX3Rva2VuIjoic3RyaW5nIn0.HfoWXjOPViPG0BWnZ7ZGahD9UXacsjl9vrYXVIHOcW8",
-  "refresh_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3NfdG9rZW4iOiJhY2Nlc3NfdG9rZW4iLCJyZWZyZXNoX3Rva2VuIjoicmVmcmVzaF90b2tlbiJ9.67LNOUvWYtrxIELorznd4WUHqvjW3cOG1_dKs1BB9w8"
+  "access_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3NfdG9rZW4iOiJhY2Nlc3NfdG9rZW4iLCJyZWZyZXNoX3Rva2VuIjoic3RyaW5nIn0.HfoWXjOPViPG0BWnZ7ZGahD9UXacsjl9vrYXVIHOcW8"
 }`}
 </CodeBlockWithCopy>
 
@@ -76,71 +75,7 @@ An API to generate access tokens, which are used to authorise any other API requ
 ###### How to use the access token
 
 -   Once you have a valid token, you can use it to authorise an API calls made to Setu, by setting the `authorization` request header as `Bearer <token-value>`.
--   Store the `refresh_token` and use it to get the new access token before it expires.
-
-<hr class="primary" />
-
-#### Refresh access token
-
-<p>
-    <strong>Before expiry</strong>, use the stored <code>refresh_token</code>{" "}
-    from the previous step to get the new <code>access_token</code>.
-</p>
-
-**Request**
-
-<table>
-    <tr>
-        <th>Staging host</th>
-        <td>
-            <code>https://accountservice-dev.setu.co</code>
-        </td>
-    </tr>
-    <tr>
-        <th>Method</th>
-        <td>
-            <code>POST</code>
-        </td>
-    </tr>
-    <tr>
-        <th>Path</th>
-        <td>
-            <code>/v1/refresh</code>
-        </td>
-    </tr>
-    <tr>
-        <th>Header</th>
-        <td>
-            <code>client</code>— will be <code>bridge</code>
-            <br />
-            <code>Content-Type</code>— will be <code>application/json</code>
-        </td>
-    </tr>
-</table>
-
-<br />
-
-**Request body**
-
-<CodeBlockWithCopy language="json">
-    {`{
-  "refresh_token": "string"
-}`}
-</CodeBlockWithCopy>
-
-**Response**
-
-<CodeBlockWithCopy language="json">
-    {`{
-  "access_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3NfdG9rZW4iOiJhY2Nlc3NfdG9rZW4iLCJyZWZyZXNoX3Rva2VuIjoic3RyaW5nIn0.HfoWXjOPViPG0BWnZ7ZGahD9UXacsjl9vrYXVIHOcW8",
-  "refresh_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3NfdG9rZW4iOiJhY2Nlc3NfdG9rZW4iLCJyZWZyZXNoX3Rva2VuIjoicmVmcmVzaF90b2tlbiJ9.67LNOUvWYtrxIELorznd4WUHqvjW3cOG1_dKs1BB9w8"
-}`}
-</CodeBlockWithCopy>
-
-<Callout type="tip">
-    💡 <strong>After expiry</strong>, use the <code>Generate Access Token</code>{" "}
-    API to get the new token.
-</Callout>
+-   To get the new token, call the same `login` API at the 4th minute of token expiry and get the new token for the further API calls.
 
 <hr class="primary" />
 
